# ceta-postproc

./: .gitignore  Ceta.hs  Complexity.hs  Main.hs  README.md  ceta-postproc.cabal  pack.sh  process  stack.yaml  test.sh  z042.xml  z042wrong.cpf  z25.xml  z25wrong.cpf
CeTA-2.41/: README
data/: 3.39.cpf  53216.xml.prof  AC28.cpf  AG01-3.24.cpf  AG01-3.24.xml  Fibonacci.jar-obl-8.cpf  babababaa-aaaabababababa.srs.xml  broydn.c.i.broydn.pl.t2.fixed.t2_fixed.cpf  ceta-postproc.prof  z042.cpf  z25ok.cpf  z27.cpf
data/4991/: 4991.cpf.ttt2.lz
data/bound/: 3633.cpf.ttt2.lz  ceta-postproc.prof
data/ceta-2.42/: 53216.xml.prof  babababaa-aaaabababababa.srs.xml.prof
src/: Array.hs  CeTA.hs  Ceta.hs  Claim.hs  Complexity.hs  IArray.hs  Main.hs  Uint.hs
