name:                ceta-postproc
version:             2.30.2
synopsis:            CeTA as postprocessor for starexec, using CeTA 2.27 (for Competition 2017)
-- description:         
homepage:            https://github.com/jwaldmann/ceta-postproc
license:             LGPL-3
license-file:        LICENSE
author:              Christian Sternagel, Rene Thiemann, Johannes Waldmann
maintainer:          johannes.waldmann@htwk-leipzig.de
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ceta-postproc
  hs-source-dirs:         src
  main-is:             Main.hs
  other-modules:       Claim, Ceta, Array, Data_Bits, IArray, Uint, Uint32
  other-extensions:    EmptyDataDecls, RankNTypes, ScopedTypeVariables
  build-depends:       base, array, parsec
  default-language:    Haskell2010
  ghc-options: -rtsopts

