name:                ceta-postproc
version:             2.41.0
synopsis:            CeTA as postprocessor for starexec, using CeTA 2.41
-- description:         
homepage:            https://github.com/jwaldmann/ceta-postproc
license:             LGPL-3
license-file:        LICENSE
author:              Christian Sternagel, Rene Thiemann, Akihisa Yamada, Johannes Waldmann
maintainer:          johannes.waldmann@htwk-leipzig.de
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: CeTA-2.41/generated/Haskell
  exposed-modules:   Ceta, Array, Data_Bits, IArray, Uint, Uint32, Uint64
  build-depends: base, array

executable ceta-postproc
  hs-source-dirs:         src
  main-is:             Main.hs
  other-modules: Claim
  build-depends:       base, ceta-postproc, parsec, clock
  ghc-options: -rtsopts

